fix - link fixed

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             </div>
             <nav class="nav-actions">
                 <ul class="flex-row-spc-btw">
-                    <li><a href="https://github.com/paul-coder-22/ComponentLib" class="btn-icon btn-icon-primary"
-                            target="_blank"><i class="fab fa-github"></i></a></li>
+                    <li><a href="https://github.com/paul-coder-22" class="btn-icon btn-icon-primary" target="_blank"><i
+                                class="fab fa-github"></i></a></li>
                 </ul>
             </nav>
         </div>
